# apps/api/alembic/versions/9d2d069139fc_update_users.py
@@ -1,0 +1,45 @@
+"""update users
+
+Revision ID: 9d2d069139fc
+Revises: 05fa1118f606
+Create Date: 2025-09-14 15:56:39.957655
+
+"""
+from typing import Sequence, Union
+
+from alembic import op
+import sqlalchemy as sa
+import sqlmodel
+
+
+# revision identifiers, used by Alembic.
+revision: str = '9d2d069139fc'
+down_revision: Union[str, Sequence[str], None] = '05fa1118f606'
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+
+def upgrade() -> None:
+    """Upgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.add_column('user', sa.Column('clerk_user_id', sqlmodel.sql.sqltypes.AutoString(), nullable=False))
+    op.add_column('user', sa.Column('first_name', sqlmodel.sql.sqltypes.AutoString(), nullable=True))
+    op.add_column('user', sa.Column('last_name', sqlmodel.sql.sqltypes.AutoString(), nullable=True))
+    op.add_column('user', sa.Column('phone', sqlmodel.sql.sqltypes.AutoString(), nullable=True))
+    op.drop_index(op.f('ix_user_client_id'), table_name='user')
+    op.create_index(op.f('ix_user_clerk_user_id'), 'user', ['clerk_user_id'], unique=True)
+    op.drop_column('user', 'client_id')
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    """Downgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.add_column('user', sa.Column('client_id', sa.VARCHAR(), autoincrement=False, nullable=False))
+    op.drop_index(op.f('ix_user_clerk_user_id'), table_name='user')
+    op.create_index(op.f('ix_user_client_id'), 'user', ['client_id'], unique=True)
+    op.drop_column('user', 'phone')
+    op.drop_column('user', 'last_name')
+    op.drop_column('user', 'first_name')
+    op.drop_column('user', 'clerk_user_id')
+    # ### end Alembic commands ###
