# apps/api/app/modules/users/models.py
@@ -8,8 +8,11 @@ from sqlmodel import Field, SQLModel
 
 class User(SQLModel, table=True):
     id: Optional[int] = Field(default=None, primary_key=True)
-    client_id: str = Field(unique=True, index=True)
+    clerk_user_id: str = Field(unique=True, index=True)
     email: str = Field(unique=True, index=True)
+    first_name: str = Field(nullable=True)
+    last_name: str = Field(nullable=True)
+    phone: str = Field(nullable=True)
     created_at: datetime = Field(nullable=True, default_factory=lambda: datetime.now())
     updated_at: datetime = Field(nullable=True, default_factory=lambda: datetime.now(), sa_column_kwargs={"onupdate": lambda: datetime.now()})
 
