# apps/api/app/modules/users/schemas.py
@@ -3,12 +3,11 @@ from typing import List
 from app.modules.users.models import User
 
 
-class UserCreate(BaseModel):
-    email: str = Field(..., min_length=3)
-    client_id: str = Field(..., min_length=3)
+# class UserCreate(BaseModel):
+#     email: str = Field(..., min_length=3)
 
-class UserUpdate(UserCreate):
-    pass
+class UserUpdate(BaseModel):
+    email: str = Field(..., min_length=3)
 
 class PaginatedUsers(BaseModel):
     items: List[User]
