# apps/api/app/modules/users/service.py
@@ -1,6 +1,6 @@
 from sqlalchemy.ext.asyncio import AsyncSession
 from app.modules.users.repo import UsersRepo
-from app.modules.users.schemas import UserCreate, PaginatedUsers, UserUpdate
+from app.modules.users.schemas import PaginatedUsers, UserUpdate
 from app.modules.users.models import User
 
 
@@ -12,8 +12,8 @@ class UsersService:
     async def list_users(self, page: int, size: int) -> PaginatedUsers:
         return await self.repo.paginate(page, size)
 
-    async def create_user(self, payload: UserCreate) -> User:
-        return await self.repo.create(payload)
+    # async def create_user(self, payload: UserCreate, client_id: str) -> User:
+    #     return await self.repo.create(payload, client_id)
 
     async def get_user(self, id: int) -> User:
         return await self.repo.get(id)
